<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Greta</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Greta</string>
    <string name="nav_header_subtitle">marcossanchezbajo@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_dbshow">Database</string>
    <string name="home_second" translatable="false">Home Second</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">App settings</string>
    <string name="sync_header">Manage your notes</string>
    <string name="othersettings_header">Other</string>
    <string name="disableDelete_title">Disable fast delete button</string>
    <string name="disableDelete_summary">Recycle bin button won\'t delete notes</string>
    <string name="encryption_preview_title">Change encrypted notes preview</string>
    <string name="encryption_preview_summary">Customize what to show instead of \"************\".\nLeave blank for default.</string>
    <string name="order_title">Order notes by…</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_password" translatable="false">PasswordActivity</string>
    <string name="export_note_title">Export notes</string>
    <string name="export_note_key" translatable="false">export</string>
    <string name="import_note_title">Import notes</string>
    <string name="import_note_key" translatable="false">import</string>
    <string name="resetAllButton_key" translatable="false">resetAll</string>
    <string name="resetAllButton_title">Reset all notes</string>
    <string name="issues_title">Got any issues with the app?</string>
    <string name="issues_subtitle">Report them here</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="accept_password">Accept</string>
    <string name="previous">Previous</string>
    <string name="message_password_fragment">Please enter your password</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="about_button_text">Show license</string>
    <string name="message_empty_note">"Please write something before saving"</string>
    <string name="message_note_saved">"Note saved"</string>
    <string name="dbflow_title">DbFlow (Database Management)</string>
    <string name="dbflow_license" tools:ignore="TypographyOther" translatable="false">The MIT License (MIT)


Copyright (c) 2014 Raizlabs

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="java_aes_crypto_license" tools:ignore="TypographyOther" translatable="false">The MIT License (MIT)

Copyright (c) 2014-2015 Tozny, LLC; (http://tozny.com)

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="explanation_button_text">About Greta</string>
    <string name="button_save">Save</string>
    <string name="button_exit">Exit</string>
    <string name="message_editnote_hint">Your note</string>
</resources>