<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="encryption_preview"
            app:title="@string/encryption_preview_title"
            android:defaultValue="************"
            android:summary="@string/encryption_preview_summary"
            android:singleLine="true" />

        <!--<EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <!--<SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

        <Preference android:title="@string/export_note_title"
            android:key="@string/export_note_key"
            android:summary=""/>

        <Preference android:title="@string/import_note_title"
            android:key="@string/import_note_key"
            android:summary=""/>

        <Preference android:title="@string/resetAllButton_title"
            android:key="@string/resetAllButton_key"
            android:summary=""/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/othersettings_header">

        <Preference android:title="@string/issues_title"
            android:key="reportIssues"
            android:summary="@string/issues_subtitle"/>

    </PreferenceCategory>

</PreferenceScreen>
