<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EditNoteActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/inputNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:hint="@string/message_editnote_hint"
            android:inputType="textMultiLine|textPersonName"
             />
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/exitBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/button_exit" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nestedScrollView">

        <ImageView
            android:id="@+id/editnote_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical|center_horizontal"
            app:srcCompat="@drawable/ic_open_lock" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>