<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="142dp"
                android:layout_height="204dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Greta"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="By Marcos Sánchez"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="20sp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:src="@drawable/icon_github" />

                <TextView
                    android:id="@+id/tv_telegram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:text="marsan27"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>


            <Button
                android:id="@+id/explanation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explanation_button_text" />

            <TextView
                android:id="@+id/libraries_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="50sp"
                android:text="Third party licenses"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/dbflow_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20sp"
                android:text="@string/dbflow_title"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/dbflow_licenseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_button_text" />

            <TextView
                android:id="@+id/javaaescrypto_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20sp"
                android:text="java-aes-cryto (Notes Encryption)"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/javaaescrypto_licenseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_button_text" />

            <TextView
                android:id="@+id/nononsensefilepicker_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20sp"
                android:text="Nononsense FilePicker (File picker)"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/nononsensefilepicker_licenseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_button_text" />

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>